--- a/glyphs.css
+++ b/glyphs.css
@@ -1,4 +1,8 @@
 @charset "utf-8";
+ 
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin,latin-ext);
+
 
 @font-face {
 	font-family:"Glyphicons Halflings";
@@ -16,10 +20,13 @@ html {
 .glyphicon {
 	position:relative;
 	top:1px;
+	display:inline-block;
 	font-family:"Glyphicons Halflings";
 	font-style:normal;
 	font-weight:400;
 	line-height:1;
+	-webkit-font-smoothing:antialiased;
+	-moz-osx-font-smoothing:grayscale
 }
  
 .glyphicon-remove:before {
