--- a/pwReqTest.css
+++ b/pwReqTest.css
@@ -1,8 +1,5 @@
 @charset "utf-8";
 
-@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic&subset=latin,latin-ext);
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin,latin-ext);
-
 @font-face {
 	font-family:"Glyphicons Halflings";
 	src:url(fonts/glyphicons-halflings-regular.eot);
@@ -12,19 +9,12 @@
 	url(fonts/glyphicons-halflings-regular.ttf) format("truetype"),
 	url(fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular) format("svg")
 }
-
 .glyphicon {
-	position:relative;
-	top:1px;
-	left:0px;
-	display:inline-block;
 	font-family:"Glyphicons Halflings";
-	font-style:normal;
-	font-weight:400;
-	line-height:1;
-	-webkit-font-smoothing:antialiased;
-	-moz-osx-font-smoothing:grayscale
+	line-height:140%;
+	vertical-align: middle;
 }
+
  
 html {
 	box-sizing: border-box;
@@ -41,15 +31,6 @@ html {
 ul.pwReqsUL {
   list-style: none;
 }
-/*
-ul.pwReqsUL>li::before {
-  /*content: "\200B";*
-	content: "A";
-	max-width: 1px;
-	overflow: hidden;
-	display: block;
-}
-*/
 ul.pwReqsUL>li {
 	display: table-row;
 	padding: 0;
